# VeruSynth

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
examples/linear_search/: Cargo.toml
examples/linear_search/src/: main.rs.bak
examples/total/src/: main.rs
fine_tune/: eval.py  plotting.py  train.py
fine_tune/extractors/: __init__.py  human_eval_verus.py  utilities.py  verus.py  verus_proof_synthesis.py
scripts/: check_autoverus.sh
src/verusynth/: annotate.py  harness.py  llm.py  rust_io.py
src/verusynth/annotate/: __init__.py  detect.py  extract.py  insert.py  merge.py
src/verusynth/lora/Qwen/Qwen3-4B-Thinking-2507/3/checkpoint-36/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
src/verusynth/lora/Qwen/Qwen3-4B-Thinking-2507/3/checkpoint-54/: adapter_config.json  rng_state.pth  trainer_state.json
test/: test_annotate.py  test_dataset.py  test_harness.py  test_tokenization.py
test/annotate/: test_insert.py
