[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verusynth"
version = "0.1.0"
description = "LLM-assisted Verus annotation synthesizer for Rust"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "outlines",
  "transformers",
  "accelerate",
]

[project.scripts]
verusynth = "verusynth.harness:main"
